2013-09-27 Jussi Ohenoja <juice@swagman.org>
	* Decided to put the usr/ubifs hierarchy under subversion.

2013-09-25 Jussi Ohenoja <juice@swagman.org>
	* Added version check for CPIO.

2013-09-24 Jussi Ohenoja <juice@swagman.org>
	* Added configuration parameters for own IP addrress and DHCP offer IP address.

2013-09-23 Jussi Ohenoja <juice@swagman.org>
	* Restored the modules in the build. There are some dependencies that affect the USB export & IP over USB when only g_multi is compiled. However, other modules can be left off the cpio without ill effects.
	* Test version for exfat support & mounting. Usable for example if conf file is on mmcblk0p1 formatted as extfat.

2013-09-17 Jussi Ohenoja <juice@swagman.org>
	* Changed the animation scripts to support new icon layout.

2013-09-12 Jussi Ohenoja <juice@swagman.org>
	* Fixed mounting, now system tries vfat, ext2, ext3, ext4 before giving up.
	* Fixed the typo causing ubifs mount problem on /mnt/u5.
	* Changes to mountable partition format in ubiboot.conf.
	* Removed all modules except g_multi from the build.

2013-09-06 Jussi Ohenoja <juice@swagman.org>
	* Rewrite of the animation toolkit, added more customizable options.
	* Removed partitions 8 and 9 from the partition list.

2013-06-04 Jussi Ohenoja <juice@swagman.org>
	* New version 0.3.3 released.
	* Fixed the HWrev. 1603 boot problem.

2013-05-30 Jussi Ohenoja <juice@swagman.org>
	* New version 0.3.2 released.
	* Configurable boot partitions by peterleinchen.
	* Fixed module dependencies for extra module loaded off cpio archive.
	* Added serial console logging.

2013-05-29 Jussi Ohenoja <juice@swagman.org>
        * Trying to implement conditional shutdown option, but that depends on unimplemened DSME functionality.

2013-05-24 Jussi Ohenoja <juice@swagman.org>
        * Taken logs of 1603 boot, trying to isolate the BME problem.

2013-04-09 Jussi Ohenoja <juice@swagman.org>
        * Changed BME initialization to support client connection.