@@ -36,9 +36,6 @@ decompress_and_pack_cpio()
   rm -rf $TEMPDIR
   mkdir -p $MENUDIR
   echo $CPIO_VERSION > "$BOOTDIR/cpio-version"
-  ln -s /mnt/2 $BOOTDIR/Harmattan
-  ln -s /mnt/2 $BOOTDIR/Nitdroid
-  ln -s /mnt/4 $BOOTDIR/Nemo
   $TAR -xvf $1 -C $MENUDIR
   if [ $? -ne 0 ]; then
     echo
