@@ -10,7 +10,7 @@ G_UBIBOOT_ARCHIVE="ubiboot-02.menus.cpio"
 
 # The version of this file. It's important that the versions of the kernel, config and cpio
 # are compatible or else you will run into no end of trouble.
-G_CONFIG_VERSION="1"
+G_CONFIG_VERSION="2"
 
 # Enable timeout for the main boot menu. If this is set to 0 then we will wait forever
 # for user interaction in the menu... propably not a wise selection.
@@ -32,10 +32,8 @@ G_EXPORTED_PARTITONS="/dev/mmcblk0"      # This exports all partitons of the dev
 #G_EXPORTED_PARTITONS="/dev/mmcblk0p3"    # this exports just the home partiton
 #G_EXPORTED_PARTITONS="/dev/mmcblk0p4"    # this exports just the nemo partition
 #G_EXPORTED_PARTITONS="/dev/mmcblk0p5"    # some people have more than 4 partitions
-#G_EXPORTED_PARTITONS="/dev/mmcblk0p6"    # ...
-#G_EXPORTED_PARTITONS="/dev/mmcblk0p7"    # ...
-#G_EXPORTED_PARTITONS="/dev/mmcblk0p8"    # ...
-#G_EXPORTED_PARTITONS="/dev/mmcblk0p9"    # ...
+#G_EXPORTED_PARTITONS="/dev/mmcblk0p6"    # some people have more than 5 partitions
+#G_EXPORTED_PARTITONS="/dev/mmcblk0p7"    # this is the last supported partition I guess
 #G_EXPORTED_PARTITONS=""                  # this turns off partition exporting
 
 # The IP address configured to the device for telnet/ssh access.
@@ -83,19 +81,9 @@ G_OVERRIDE_USB_CHARGER_BOOT=1
 G_HARMATTAN_INITSCRIPT="\/sbin\/preinit_harmattan"
 G_NITDROID_INITSCRIPT="\/sbin\/preinit_nitdroid"
 G_NEMO_INITSCRIPT="\/sbin\/init"
-
-# Partition numbers for different OS'es. Make sure that you have these in place, or else booting will fail.
-# Do NOT touch these values unless you know what are you doing, see also G_MOUNTABLE_PARTITONS section
-#
-G_HARMATTAN_PARTITION=2
-G_NITDROID_PARTITION=2
-G_NEMO_PARTITION=4
-
-# List of mountable partitions containing bootable kernels.
-# Normally you need to have at least 2 and 4 mounted, but if you keep your kernels in unusual
-# locations you need to modify this.
-#
-G_MOUNTABLE_PARTITONS="2 4"
+G_FIREFOX_INITSCRIPT="\/sbin\/init
+G_UBUNTU_INITSCRIPT="\/sbin\/init
+G_NEMO_INITSCRIPT="\/sbin\/init
 
 # Now follow the bootable OS'es and kernels on the device, this is the structure of the 2nd level menu.
 # Due to screen resolution issues, the maximum length of the kernel label is 30 characters.
@@ -110,7 +98,8 @@ G_MOUNTABLE_PARTITONS="2 4"
 #   Setting this variable to zero disables the autoboot on the OS entry.
 #
 
-# Nitdroid kernels
+# The first OS is usually Nitdroid.
+# This section lists the Nitdroid specific switches and kernels
 G_NITDROID_NUM=1
 G_NITDROID_AUTOBOOT=0
 G_NITDROID_1_LABEL=""
@@ -126,7 +115,8 @@ G_NITDROID_5_FILE=""
 G_NITDROID_6_LABEL=""
 G_NITDROID_6_FILE=""
 
-# Harmattan kernels
+# The second OS is usually Harmattan.
+# This section lists the Harmattan specific switches and kernels
 G_HARMATTAN_NUM=1
 G_HARMATTAN_AUTOBOOT=0
 G_HARMATTAN_1_LABEL=""
@@ -142,7 +132,8 @@ G_HARMATTAN_5_FILE=""
 G_HARMATTAN_6_LABEL=""
 G_HARMATTAN_6FILE=""
 
-# Nemo kernels
+# The third OS is usually Nemo.
+# This section lists the Nemo specific switches and kernels
 G_NEMO_NUM=1
 G_NEMO_AUTOBOOT=0
 G_NEMO_1_LABEL=""
@@ -157,6 +148,57 @@ G_NEMO_5_LABEL=""
 G_NEMO_5_FILE=""
 G_NEMO_6_LABEL=""
 G_NEMO_6_FILE=""
+
+# The fourth OS is usually FirefoxOS.
+# This section lists the FirefoxOS specific switches and kernels
+G_FIREFOX_NUM=0
+G_FIREFOX_AUTOBOOT=0
+G_FIREFOX_1_LABEL=""
+G_FIREFOX_1_FILE=""
+G_FIREFOX_2_LABEL=""
+G_FIREFOX_2_FILE=""
+G_FIREFOX_3_LABEL=""
+G_FIREFOX_3_FILE=""
+G_FIREFOX_4_LABEL=""
+G_FIREFOX_4_FILE=""
+G_FIREFOX_5_LABEL=""
+G_FIREFOX_5_FILE=""
+G_FIREFOX_6_LABEL=""
+G_FIREFOX_6_FILE=""
+
+# The fifth OS is usually Ubuntu.
+# This section lists the Ubuntu specific switches and kernels
+G_UBUNTU_NUM=0
+G_UBUNTU_AUTOBOOT=0
+G_UBUNTU_1_LABEL=""
+G_UBUNTU_1_FILE=""
+G_UBUNTU_2_LABEL=""
+G_UBUNTU_2_FILE=""
+G_UBUNTU_3_LABEL=""
+G_UBUNTU_3_FILE=""
+G_UBUNTU_4_LABEL=""
+G_UBUNTU_4_FILE=""
+G_UBUNTU_5_LABEL=""
+G_UBUNTU_5_FILE=""
+G_UBUNTU_6_LABEL=""
+G_UBUNTU_6_FILE=""
+
+# The sixth OS is usually SailfishOS.
+# This section lists the SAILFISHOS specific switches and kernels
+G_SAILFISH_NUM=0
+G_SAILFISH_AUTOBOOT=0
+G_SAILFISH_1_LABEL=""
+G_SAILFISH_1_FILE=""
+G_SAILFISH_2_LABEL=""
+G_SAILFISH_2_FILE=""
+G_SAILFISH_3_LABEL=""
+G_SAILFISH_3_FILE=""
+G_SAILFISH_4_LABEL=""
+G_SAILFISH_4_FILE=""
+G_SAILFISH_5_LABEL=""
+G_SAILFISH_5_FILE=""
+G_SAILFISH_6_LABEL=""
+G_SAILFISH_6_FILE=""
 
 # Default boot kernel
 # If timeout is reached before user interaction this is booted.
